change npm name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "textlint-plugin-asciidoc",
+  "name": "@ynitto/textlint-plugin-asciidoc",
   "version": "0.0.1",
   "description": "Asciidoc support for textlint.",
   "keywords": [
